--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
 
   <ng:view></ng:view>
 
-  <script src="lib/angular/angular-1.0.0rc7.js" ng:autobind></script>
-  <script src="lib/angular/angular-resource-1.0.0rc7.js" ></script>
+  <script src="lib/angular/angular.js" ng:autobind></script>
+  <script src="lib/angular/angular-resource.js" ></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
